--- a/myface-onface-html/src/assets/less/style/forms.less
+++ b/myface-onface-html/src/assets/less/style/forms.less
@@ -11,7 +11,7 @@
     border-color: @light-blue;
     box-shadow: none;
   }
-  .placeholder(@text-color-2, italic, 0.7);
+  .placeholder(@text-color-2, normal, 0.7);
 
   &:not(select) {
     -webkit-appearance: none;
