--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -267,17 +267,17 @@ img {
 }
 .form-control::-moz-placeholder {
   color: #727272;
-  font-style: italic;
+  font-style: normal;
   opacity: 0.7;
 }
 .form-control:-ms-input-placeholder {
   color: #727272;
-  font-style: italic;
+  font-style: normal;
   opacity: 0.7;
 }
 .form-control::-webkit-input-placeholder {
   color: #727272;
-  font-style: italic;
+  font-style: normal;
   opacity: 0.7;
 }
 .form-control:not(select) {
@@ -618,12 +618,14 @@ img {
 }
 .amount-dropdown {
   min-width: auto;
-  width: 68px !important;
   height: 40px;
   padding-left: 20px;
   background-color: transparent;
   color: #212121;
   border-color: #dfdfdf;
+}
+.amount-dropdown.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+  width: 68px;
 }
 .amount-dropdown .caret {
   border-width: 0 !important;
@@ -640,17 +642,21 @@ img {
   webkit-box-shadow: none;
   box-shadow: none;
 }
+.amount-dropdown.dropdown-toggle .filter-option {
+  text-align: center !important;
+}
 .default-dropdown {
   min-width: auto;
-  width: 68px !important;
   height: 40px;
   padding-left: 20px;
   background-color: transparent;
   color: #212121;
   border-color: #dfdfdf;
   min-width: 100px;
-  width: auto !important;
   padding-left: 0;
+}
+.default-dropdown.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+  width: 68px;
 }
 .default-dropdown .caret {
   border-width: 0 !important;
@@ -666,6 +672,12 @@ img {
 .btn-group.open .default-dropdown {
   webkit-box-shadow: none;
   box-shadow: none;
+}
+.default-dropdown.dropdown-toggle .filter-option {
+  text-align: center !important;
+}
+.default-dropdown.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+  width: auto;
 }
 .pagination-page {
   text-align: center;
@@ -1216,9 +1228,29 @@ footer a {
 .checkout-step-1 textarea {
   resize: none;
 }
+@media (min-width: 1200px) {
+  .checkout-step-1 .panel-body > .row > .col-md-7 {
+    padding-right: 25px;
+  }
+}
 .checkout-group-8 .control-label {
   padding-top: 0;
   margin-bottom: 10px;
+}
+.tel-group .form-control::-moz-placeholder {
+  color: #727272;
+  font-style: italic;
+  opacity: 0.7;
+}
+.tel-group .form-control:-ms-input-placeholder {
+  color: #727272;
+  font-style: italic;
+  opacity: 0.7;
+}
+.tel-group .form-control::-webkit-input-placeholder {
+  color: #727272;
+  font-style: italic;
+  opacity: 0.7;
 }
 .btn-checkout {
   width: 100%;
@@ -1282,15 +1314,25 @@ footer a {
   border-top: 1px solid #dfdfdf;
 }
 .box-login .btn {
-  width: 155px;
+  width: 180px;
 }
 @media (max-width: 767px) {
   .box-login .btn {
     width: 100%;
+    max-width: 325px;
   }
 }
-.checkout-box-2 .coupon-input {
-  width: 160px;
+.checkout-box-2 .coupon-group {
+  width: 100%;
+  display: table;
+}
+.checkout-box-2 .coupon-group .coupon-input {
+  width: 70%;
+  float: left;
+}
+.checkout-box-2 .coupon-group .coupon-btn {
+  width: 28%;
+  float: right;
 }
 @media (max-width: 991px) {
   .checkout-box-2 .coupon-input {
@@ -1301,6 +1343,9 @@ footer a {
   border-color: #7d89c1;
   width: auto;
   display: inline-block;
+}
+.tel-group > .col-sm-7 {
+  padding-left: 0;
 }
 .box-cart {
   border: 1px solid #dfdfdf;
@@ -1511,6 +1556,111 @@ footer a {
 .step-3-block .shop-name {
   color: #4355a5;
   font-weight: bold;
+}
+.box-log {
+  width: 100%;
+  display: none;
+}
+.box-log.login-form {
+  padding: 5px 0 30px;
+}
+.box-log .divider {
+  border-style: solid;
+}
+.box-log .divider.mr-10 {
+  margin: 10px 0;
+}
+.box-log .form-title {
+  width: 100%;
+  color: #4355a5;
+  margin-bottom: 15px;
+}
+.box-log .remember-text {
+  float: right;
+  margin-bottom: 15px;
+}
+.box-log .remember-text i {
+  color: #ff5722;
+}
+.box-log .forget-text {
+  float: right;
+  text-decoration: underline;
+  margin-bottom: 10px;
+  color: #727272;
+  font-size: 13px;
+  font-style: italic;
+  font-size: 14px;
+}
+.box-log .forget-text:hover {
+  color: #ff916f;
+  text-decoration: none;
+}
+.box-log .login-control {
+  width: 250px;
+  float: right;
+  margin-bottom: 15px;
+  background-color: #4355a5;
+}
+.box-log .login-control:hover {
+  background-color: #8e99c9;
+  border-color: #8e99c9;
+}
+.box-log.register-form {
+  padding: 15px 0 5px;
+}
+.box-log.register-form .form-group {
+  margin-left: 0;
+  margin-right: 0;
+}
+.box-log .register-control {
+  width: 100%;
+  background-color: #4355a5;
+}
+.box-log .register-control:hover {
+  background-color: #8e99c9;
+  border-color: #8e99c9;
+}
+.box-log .dropdown-toggle.btn-default {
+  color: rgba(144, 144, 144, 0.8);
+}
+.box-log .dropdown-toggle.btn-default:hover,
+.box-log .dropdown-toggle.btn-default:active,
+.box-log .dropdown-toggle.btn-default:focus {
+  color: #fff;
+}
+.box-log .rg-group-1 .rg-group-1-1 {
+  width: 20%;
+  float: left;
+}
+.box-log .rg-group-1 .rg-group-1-1 .btn,
+.box-log .rg-group-1 .rg-group-1-1 .default-dropdown {
+  min-width: auto;
+  height: auto;
+}
+.box-log .rg-group-1 .rg-group-1-1 .btn.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn),
+.box-log .rg-group-1 .rg-group-1-1 .default-dropdown.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+  width: 100%;
+}
+.box-log .rg-group-1 .rg-group-1-1 .btn .dropdown-toggle,
+.box-log .rg-group-1 .rg-group-1-1 .default-dropdown .dropdown-toggle {
+  width: 100%;
+}
+.box-log .rg-group-1 .rg-group-1-2 {
+  width: 78%;
+  float: right;
+}
+.box-log .rg-group-5 .default-dropdown {
+  width: 100% !important;
+}
+.box-log .rg-group-5 .default-dropdown .dropdown-toggle {
+  width: 100%;
+}
+.box-log .rg-group-9 {
+  margin-bottom: 20px;
+}
+.box-log .rg-group-9 .control-label {
+  padding-top: 0;
+  margin-bottom: 10px;
 }
 @media (max-width: 991px) {
   .checkout-process {
@@ -1770,7 +1920,7 @@ select.selectpicker {
   display: inline-block;
   overflow: hidden;
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 .bootstrap-select.btn-group .dropdown-toggle .caret {
   position: absolute;
