--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -77,6 +77,27 @@
 		}
 	}
 }
+.checkout-group-1 {
+	.rg-group-1-1 {
+		width: 22%;
+		float: left;
+		.btn,
+		.default-dropdown {
+			min-width: auto;
+			&.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+				width: 100%;
+			}
+			height: auto;
+			.dropdown-toggle {
+				width: 100%;
+			}
+		}
+	}
+	.rg-group-1-2 {
+		width: 76%;
+		float: right;
+	}
+}
 .checkout-group-8 {
 	.control-label {
 		padding-top: 0;
