--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -10,8 +10,17 @@
 	    			<div class="form-group checkout-group-1">
               <label for="" class="col-sm-4 control-label">Họ tên người nhận hàng</label>
               <div class="col-sm-8">
-                <input type="text" class="form-control">
-                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+              	<div class="rg-group-1-1">
+									<select class="selectpicker default-dropdown">
+	                  <option>Anh</option>
+	                  <option>Chị</option>
+	                </select>
+	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+								</div>
+								<div class="rg-group-1-2">
+									<input type="text" class="form-control" placeholder=" Họ tên người nhận hàng">
+	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+								</div>
               </div>
             </div>
             <div class="form-group checkouta-group-2">
@@ -147,7 +156,6 @@
 			                  <option>Anh</option>
 			                  <option>Chị</option>
 			                </select>
-			                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 										</div>
 										<div class="rg-group-1-2">
 											<input type="text" class="form-control" placeholder=" Họ tên người nhận hàng">
