--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -496,6 +496,7 @@ img {
   display: table;
 }
 .products-block .product-header .product-title {
+  width: 100%;
   float: left;
   line-height: 1.4;
 }
