--- a/myface-onface-html/src/assets/less/style/products.less
+++ b/myface-onface-html/src/assets/less/style/products.less
@@ -43,6 +43,7 @@
     height: 78px;
     display: table;
     .product-title {
+      width: 100%;
       float: left;
       line-height: 1.4;
       a {
