--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -530,7 +530,7 @@
   }
 }
 
-@media (max-width: @screen-sm-max) {
+@media (max-width: @screen-md-max) {
   .checkout-process {
 		display: none;
 	}
