--- a/myface-onface-html/src/assets/less/style/page/product-onface.less
+++ b/myface-onface-html/src/assets/less/style/page/product-onface.less
@@ -12,6 +12,7 @@
 	border: 1px solid #e9eaed;
 	font-family: @font-family-sans-serif-onface;
 	font-size: 13px;
+	line-height: 1.4;
 	h1,
 	h2,
 	h3,
