--- a/myface-onface-html/src/views/checkout-step-2.html
+++ b/myface-onface-html/src/views/checkout-step-2.html
@@ -27,7 +27,7 @@
 <!--checkout-process-->
 {% block page-container %}
 <main class="container checkout-step-2">
-	<div class="col-xs-12 col-lg-9">
+	<div class="col-xs-12 col-md-9">
 		<div class="panel panel-default">
 		  <div class="panel-heading">Thông tin thanh toán</div>
 		  <div class="panel-body">
@@ -55,7 +55,7 @@
 		  </div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-lg-3">
+	<div class="col-xs-12 col-md-3">
 		<div class="box checkout-box-info">
 			<div class="box-row">
         <label class="pull-left">Địa chỉ nhận hàng</label>
