--- a/myface-onface-html/src/views/cart-emty.html
+++ b/myface-onface-html/src/views/cart-emty.html
@@ -21,7 +21,7 @@
 {% endblock %}
 {% block page-container %}
 <main class="container cart">
-	<div class="col-xs-12 col-lg-9">
+	<div class="col-xs-12 col-md-9">
 		<div class="panel panel-default">
 		  <div class="panel-heading">Giỏ hàng của bạn <span class="amount">(Đang có<span class="orange-text"> 0</span> sản phẩm)</span></div>
 		  <div class="panel-body">
@@ -32,7 +32,7 @@
 		  </div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-lg-3">
+	<div class="col-xs-12 col-md-3">
 		<div class="box checkout-box-1">
 			<p>Đơn hàng của bạn cần trên <strong>150.000</strong>đ để được <strong>miễn phí</strong> vận chuyển tại TP.HCM, Hà Nội.</p>
 			<span>(trên <strong>300.000</strong>đ đối với Tỉnh/Thành khác)</span>
