--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -1,7 +1,7 @@
 {% extends "layout/_layout-checkout.html" %}
 {% block page-container %}
 <main class="container checkout-step-1">
-	<div class="col-xs-12 col-lg-9">
+	<div class="col-xs-12 col-md-9">
 		<div class="panel panel-default">
 		  <div class="panel-heading">Địa chỉ nhận hàng</div>
 		  <div class="panel-body form-horizontal">
@@ -226,7 +226,7 @@
 		  </div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-lg-3">
+	<div class="col-xs-12 col-md-3">
 		<div class="box checkout-box-1">
 			<p>Đơn hàng của bạn cần trên <strong>150.000</strong>đ để được <strong>miễn phí</strong> vận chuyển tại TP.HCM, Hà Nội.</p>
 			<span>(trên <strong>300.000</strong>đ đối với Tỉnh/Thành khác)</span>
