--- a/myface-onface-html/src/views/checkout-step-3.html
+++ b/myface-onface-html/src/views/checkout-step-3.html
@@ -26,7 +26,7 @@
 {% endblock %}
 {% block page-container %}
 <main class="container checkout-step-3">
-	<div class="col-lg-offset-3 col-lg-6">
+	<div class="col-md-offset-3 col-md-6">
 		<div class="step-3-block st-bl-1">
 			<label class="step-block-title"> <span><i class="fa fa-check-circle"></i> </span>Đặt hàng thành công</label>
 			<p>Mã đơn hàng của bạn là: <span class="invoice-number">#101200160311.</span></p>
