--- a/myface-onface-html/src/views/block/modal/_invoice-modal.html
+++ b/myface-onface-html/src/views/block/modal/_invoice-modal.html
@@ -15,31 +15,6 @@
               <th class="col-xs-2 text-right">Giá tiền</th>
             </tr>
           </thead>
-          <!--gift-->
-          <tbody class="gift"> 
-            {% for x in [1,2] %} 
-            <tr>
-              <td>
-                <span class="gift-icon"></span>
-                <div class="item">
-                  <div class="product-img">
-                    <img src="assets/images/upload/product/product-4.jpg" alt="myface">
-                  </div>
-                  <div class="product-info">
-                    <span class="gift-span">[ Quà tặng]</span>
-                    <span class="product-title">Tai nghe siêu chất lượng Sennheiser HD229 Màu Đen</span>
-                  </div>
-                </div>
-              </td>
-              <td class="text-center">
-                <input class="btn disable-amount" value="1" disabled="">
-              </td>
-              <td class="text-right">
-                <span class="price">0<sup>đ</sup></span>
-              </td>
-            </tr>
-            {% endfor %}
-          </tbody><!--/.gift--> 
           <tbody>
             <tr>
               <td>
@@ -53,10 +28,17 @@
                 </div>
               </td>
               <td class="text-center">
-                <select class="selectpicker select-amount">
+                <select class="selectpicker select-amount" data-size="4">
                   <option>1</option>
                   <option>2</option>
                   <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+                  <option>10</option>
                 </select>
                 <p class="invoice-remove remove-btn"><i class="fa fa-times-circle"></i> <span>Bỏ sản phẩm</span></p>
               </td>
@@ -76,10 +58,17 @@
                 </div>
               </td>
               <td class="text-center">
-                <select class="selectpicker select-amount">
+                <select class="selectpicker select-amount" data-size="4">
                   <option>1</option>
                   <option>2</option>
                   <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+                  <option>10</option>
                 </select>
                 <p class="invoice-remove remove-btn"><i class="fa fa-times-circle"></i> <span>Bỏ sản phẩm</span></p>
               </td>
