--- a/myface-onface-html/src/views/checkout-step-2.html
+++ b/myface-onface-html/src/views/checkout-step-2.html
@@ -83,6 +83,17 @@
 	          </div>
 	        </div>
 	      </div><!--/.cart-header-->
+	      <!--gift-->
+      	<div class="cart-row">
+          <div class="cart-left">
+          	<span class="gift-icon"></span>
+          	<span class="amount">01 x</span> 
+          	<span>Áo Sơ Mi Nam Dáng Ôm màu xanh dương</span>
+          </div>
+          <div class="cart-right">
+          	<span class="price">0<sup>đ</sup></span>
+          </div>
+        </div><!--/.gift-->
         <div class="cart-product">
         	{% for x in [1,2,3] %}
         	<div class="cart-row">
