--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -1260,21 +1260,6 @@ footer a {
   padding-top: 0;
   margin-bottom: 10px;
 }
-.tel-group .form-control::-moz-placeholder {
-  color: #727272;
-  font-style: italic;
-  opacity: 0.7;
-}
-.tel-group .form-control:-ms-input-placeholder {
-  color: #727272;
-  font-style: italic;
-  opacity: 0.7;
-}
-.tel-group .form-control::-webkit-input-placeholder {
-  color: #727272;
-  font-style: italic;
-  opacity: 0.7;
-}
 .btn-checkout {
   width: 100%;
   padding: 5px 10px 0;
@@ -1367,8 +1352,25 @@ footer a {
   width: auto;
   display: inline-block;
 }
-.tel-group > .col-sm-7 {
-  padding-left: 0;
+.tel-group .form-control::-moz-placeholder {
+  color: #727272;
+  font-style: italic;
+  opacity: 0.7;
+}
+.tel-group .form-control:-ms-input-placeholder {
+  color: #727272;
+  font-style: italic;
+  opacity: 0.7;
+}
+.tel-group .form-control::-webkit-input-placeholder {
+  color: #727272;
+  font-style: italic;
+  opacity: 0.7;
+}
+@media (min-width: 991px) {
+  .tel-group > .col-sm-7 {
+    padding-left: 0;
+  }
 }
 .box-cart {
   border: 1px solid #dfdfdf;
@@ -1426,6 +1428,17 @@ footer a {
   font-size: 11px;
   font-family: Arial, sans-serif;
   padding-left: 0;
+  padding-right: 2px;
+}
+.cart-table .cart-product .cart-left .gift-icon {
+  width: 16px;
+  height: 18px;
+  position: relative;
+  top: auto;
+  left: auto;
+  margin-right: 2px;
+  display: inline-block;
+  background: url('../images/icons/gift-2.png') no-repeat;
 }
 .cart-table .cart-product .cart-right {
   padding-right: 0;
