--- a/myface-onface-html/src/views/product-onface-detail.html
+++ b/myface-onface-html/src/views/product-onface-detail.html
@@ -90,10 +90,17 @@
                 <span>Số lượng:</span>
               </div>
               <div class="item-property-values">
-                <select class="selectpicker select-amount">
+                <select class="selectpicker select-amount" data-size="5">
                   <option>1</option>
                   <option>2</option>
                   <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+                  <option>10</option>
                 </select>
               </div>
             </div>
