--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -11,10 +11,12 @@
               <label for="" class="col-sm-4 control-label">Họ tên người nhận hàng</label>
               <div class="col-sm-8">
               	<div class="rg-group-1-1">
-									<select class="selectpicker default-dropdown">
-	                  <option>Anh</option>
-	                  <option>Chị</option>
-	                </select>
+              		<div class="default-dropdown">
+										<select class="form-control">
+		                  <option>Anh</option>
+		                  <option>Chị</option>
+		                </select>
+		               </div>
 	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 								</div>
 								<div class="rg-group-1-2">
@@ -41,11 +43,13 @@
             <div class="form-group checkout-group-4">
               <label for="" class="col-sm-4 control-label">Tỉnh/Thành phố</label>
               <div class="col-sm-8">
-                <select class="selectpicker default-dropdown">
-                  <option>Hồ Chí Minh</option>
-                  <option>Hà Nội</option>
-                  <option>Đồng Nai</option>
-                </select>
+              	<div class="default-dropdown">
+	                <select class="form-control">
+	                  <option>Hồ Chí Minh</option>
+	                  <option>Hà Nội</option>
+	                  <option>Đồng Nai</option>
+	                </select>
+	               </div>
                 <label for="" class="error">Vui lòng nhập đủ thông tin</label>
               </div>
             </div>
@@ -53,19 +57,23 @@
               <label for="" class="col-sm-4 control-label">Quận/Huyện-Phường/Xã</label>
               <div class="col-sm-8">
               	<div class="city-2">
-									<select class="selectpicker default-dropdown">
-	                  <option>Quận 1</option>
-	                  <option>Quận 2</option>
-	                  <option>Quận 3</option>
-	                </select>
+              		<div class="default-dropdown">
+										<select class="form-control">
+		                  <option>Quận 1</option>
+		                  <option>Quận 2</option>
+		                  <option>Quận 3</option>
+		                </select>
+		               </div>
 	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 								</div>
 								<div class="city-3">
-									<select class="selectpicker default-dropdown">
-	                  <option>Phường 1</option>
-	                  <option>Phường 2</option>
-	                  <option>Phường 3</option>
-	                </select>
+									<div class="default-dropdown">
+										<select class="form-control">
+		                  <option>Phường 1</option>
+		                  <option>Phường 2</option>
+		                  <option>Phường 3</option>
+		                </select>
+		               </div>
 	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 								</div>
               </div>
@@ -152,10 +160,12 @@
 		    				<div class="register-form-inner">
 		    					<div class="form-group rg-group-1">
 		    						<div class="rg-group-1-1">
-											<select class="selectpicker default-dropdown">
-			                  <option>Anh</option>
-			                  <option>Chị</option>
-			                </select>
+		    							<div class="default-dropdown">
+												<select class="form-control">
+				                  <option>Anh</option>
+				                  <option>Chị</option>
+				                </select>
+				              </div>
 										</div>
 										<div class="rg-group-1-2">
 											<input type="text" class="form-control" placeholder=" Họ tên người nhận hàng">
@@ -176,29 +186,35 @@
 			            </div>
 			            <div class="divider"></div>
 			            <div class="form-group rg-group-5">
-		                <select class="selectpicker default-dropdown">
-		                	<option>Hồ Chí Minh</option>
-		                  <option>Hồ Chí Minh</option>
-		                  <option>Hà Nội</option>
-		                  <option>Đồng Nai</option>
-		                </select>
+			            	<div class="default-dropdown">
+			                <select class="form-control">
+			                	<option>Hồ Chí Minh</option>
+			                  <option>Hồ Chí Minh</option>
+			                  <option>Hà Nội</option>
+			                  <option>Đồng Nai</option>
+			                </select>
+			               </div>
 		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 		              </div>
 		              <div class="form-group rg-group-6">
 			              <div class="city-2">
-											<select class="selectpicker default-dropdown">
-			                  <option>Quận 1</option>
-			                  <option>Quận 2</option>
-			                  <option>Quận 3</option>
-			                </select>
+			              	<div class="default-dropdown">
+												<select class="form-control">
+				                  <option>Quận 1</option>
+				                  <option>Quận 2</option>
+				                  <option>Quận 3</option>
+				                </select>
+				               </div>
 			                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 										</div>
 										<div class="city-3">
-											<select class="selectpicker default-dropdown">
-			                  <option>Phường 1</option>
-			                  <option>Phường 2</option>
-			                  <option>Phường 3</option>
-			                </select>
+											<div class="default-dropdown">
+												<select class="form-control">
+				                  <option>Phường 1</option>
+				                  <option>Phường 2</option>
+				                  <option>Phường 3</option>
+				                </select>
+				               </div>
 			                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 										</div>
 		              </div>
