--- a/myface-onface-html/src/assets/less/style/dropdown.less
+++ b/myface-onface-html/src/assets/less/style/dropdown.less
@@ -31,7 +31,7 @@
   .caret {
 		border-width: 0 !important;
 		position: relative;
-    font: normal normal normal 14px/1 FontAwesome;
+	  font: normal normal normal 14px/1 FontAwesome;
 		&:before {
 			content: "\f107";
 			position: absolute;
@@ -50,10 +50,23 @@
   }
 }
 .default-dropdown {
-	.amount-dropdown();
-	min-width: 100px;
-	&.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
-		width: auto;
+	width: 100%;
+	background: #fff;
+	position: relative;
+	select {
+		-webkit-appearance: none;
+	  -moz-appearance: none;
+	  &:-ms-expand {
+	  	display: none;
+		}
+		background: transparent;
+		cursor: pointer;
 	}
-	padding-left: 0;
+	&:after {
+		font: normal normal normal 14px/1 FontAwesome;
+		content: "\f107";
+		position: absolute;
+		top: 10px;
+    right: 8px;
+	}
 }
