--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -144,7 +144,7 @@
 			            	<input type="submit" class="btn btn-secondary login-control" value="Đăng nhập">
 			            </div>
 			            <div class="block">
-			            	<a class="forget-text" href="#">Quên mật khẩu?</a>
+			            	<a class="forget-text" href="forgot-pass.html">Quên mật khẩu?</a>
 			            </div>
 			            <div class="divider mr-10"></div>
 		    				</div>
