--- a/myface-onface-html/src/views/layout/_layout-checkout.html
+++ b/myface-onface-html/src/views/layout/_layout-checkout.html
@@ -14,4 +14,5 @@
 {% block modal%}
 {% include "../block/modal/_invoice-modal.html" %}
 {% include "../block/modal/_invoice-emty-modal.html" %}
+{% include "../block/modal/_alert-modal.html" %}
 {% endblock %}
