--- a/myface-onface-html/src/assets/less/style/forms.less
+++ b/myface-onface-html/src/assets/less/style/forms.less
@@ -121,7 +121,8 @@
   > label {
     padding-left: 22px;
   }
-  input[type=radio] {
+  input[type=radio], 
+  input[type=checkbox] {
     visibility: hidden;
   }
   span {
