--- a/myface-onface-html/src/assets/less/style/modal.less
+++ b/myface-onface-html/src/assets/less/style/modal.less
@@ -1,3 +1,9 @@
+.modal-title {
+	color: @secondary-color;
+}
+.modal-body {
+	color: @text-color-1;
+}
 .modal-secondary {
 	margin: 90px 0;
 	.modal-dialog {
