--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -454,9 +454,15 @@
 	}
 	.remember-text {
 		float: right;
+		position: relative;
 		margin-bottom: 15px;
 		i {
 			color: @primary-color;
+		}
+		span {
+			&:before {
+				top: 0;
+			}
 		}
 	}
 	.forget-text {
