--- a/myface-onface-html/src/views/block/modal/_yes-no-modal.html
+++ b/myface-onface-html/src/views/block/modal/_yes-no-modal.html
@@ -15,8 +15,8 @@
         </div>
         <div class="box-footer clearfix">
           <div class="modal-footer">
-            <button id="agree" type="submit" class="btn btn-lime">Gửi</button>
-            <a href="#" class="btn btn-default remove_text" data-dismiss="modal">Đóng</a>
+            <button id="agree" type="submit" class="btn btn-primary">Gửi</button>
+            <a href="#" class="btn btn-default" data-dismiss="modal">Đóng</a>
           </div>
         </div>
       </form>
