--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -137,8 +137,11 @@
 			                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 			              </div>
 			            </div>
-			            <div class="block">
-			            	<p class="remember-text"> <span><i class="fa fa-check-circle"></i> </span>Ghi nhớ tài khoản</p>
+			            <div class="checkbox color-radio block">
+			            	<label class="remember-text">
+		            	 		<input type="checkbox" name="" id="" value="" checked="">
+											<span>Ghi nhớ tài khoản</span>
+			            	</label>
 			            </div>
 			            <div class="block">
 			            	<input type="submit" class="btn btn-secondary login-control" value="Đăng nhập">
