--- a/myface-onface-html/src/views/block/modal/_alert-modal.html
+++ b/myface-onface-html/src/views/block/modal/_alert-modal.html
@@ -11,7 +11,7 @@
       </div>
       <div class="box-footer clearfix">
         <div class="modal-footer">
-          <a href="#" class="btn btn-default remove_text" data-dismiss="modal">Đóng</a>
+          <a href="#" class="btn btn-primary" data-dismiss="modal">Đóng</a>
         </div>
       </div>
     </div>
