--- a/myface-onface-html/src/views/block/_header-checkout.html
+++ b/myface-onface-html/src/views/block/_header-checkout.html
@@ -1,7 +1,7 @@
 <header>
 	<div class="container">
 		<div class="col-xs-12 col-sm-6 col-lg-3 shop-logo">
-			<a href="myface-shop.html" title="DW Secret Saigon">
+			<a href="myface-user-shop.html" title="DW Secret Saigon">
 				<h1 class="logo-text">DW Secret Saigon</h1>
 			</a>
 		</div>
