--- a/myface-onface-html/src/views/layout/_layout-checkout.html
+++ b/myface-onface-html/src/views/layout/_layout-checkout.html
@@ -2,13 +2,13 @@
 {% block page-containerclass%}checkout{% endblock %}
 <!--header-->
 {% block header%}
-{% include "../block/_checkout-header.html" %}
+{% include "../block/_header-checkout.html" %}
 {% endblock %}
 <!--page-container-->
 {% block page-container %}{% endblock %}
 <!--footer-->
 {% block footer%}
-{% include "../block/_footer.html" %}
+{% include "../block/_footer-onface.html" %}
 {% endblock %}
 <!--modal-->
 {% block modal%}
