--- a/myface-onface-html/src/views/layout/_layout-product-onface.html
+++ b/myface-onface-html/src/views/layout/_layout-product-onface.html
@@ -7,7 +7,7 @@
 {% block page-container %}{% endblock %}
 <!--footer-->
 {% block footer%}
-{% include "../block/_footer.html" %}
+{% include "../block/_footer-onface.html" %}
 {% endblock %}
 <!--modal-->
 {% block modal%}
