--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -1,71 +1,6 @@
-{% extends "layout/_layout-product-onface.html" %}
+{% extends "layout/_layout-base.html" %}
 {% block page-container %}
 <main>
-	<!--banner-->
-	<div class="banner">
-		<img src="assets/images/upload/banner/banner.jpg" alt="myface">
-	</div><!--/.banner-->
-	<!--nav-filter-->
-	<div class="nav-filter">
-    <div class="select-filter">
-      <select class="selectpicker blue-select">
-        <option>Tất cả sản phẩm</option>
-        <option>Thời trang nam</option>
-        <option>Thời trang nữ</option>
-      </select>
-    </div>
-    <div class="pull-right">
-      <button class="btn btn-primary btn-cart" data-toggle="modal" data-target="#invoice-emty-modal"><i class="fa fa-shopping-cart"></i><span>Giỏ hàng</span><span>(0)</span></button>
-    </div>
-	</div><!--nav-filter-->
-	<div class="product-container">
-    <!--product-block-->
-		<div class="products-block">   
-      {% for x in [1,2,3,4,5] %}   
-      <!--item-->
-      <div class="item">
-        <a class="product-img" href="product-onface-detail.html">
-          <img src="assets/images/upload/product/product.jpg" alt="myface">
-        </a>
-        <div class="product-info">
-          <div class="product-header">
-            <h2 class="product-title">
-              <a href="product-onface-detail.html">Áo Sơ Mi Nam Dáng Ôm màu xanh dương</a>
-              <span class="sale-tag">sale</span>
-            </h2>
-            <div class="price-block">
-              <span class="price current">235.000<sup>đ</sup></span>
-              <span class="price original">325.000<sup>đ</sup></span> 
-            </div>
-          </div>
-          <p class="product-description">
-            Sử dụng chất liệu cao cấp cùng kiểu dáng hiện đại, áo sơ mi slim fit vạt bầu đem lại nét thanh lịch, sang trọng cho phái mạnh khi ...              
-          </p>
-        </div>
-        <div class="product-action">
-          <a class="btn btn-default btn-buy" href="product-onface-detail.html">Mua ngay <i class="fa fa-angle-right"></i></a>
-        </div>
-      </div><!-- /.item -->
-      {% endfor %}
-    </div>
-	</div><!--/.product-list-group-->
-	<!--pagination-->
-	<nav class="pagination-page">
-	  <ul class="pagination">
-	    <li>
-	      <a href="#" aria-label="Previous">
-	        <span aria-hidden="true">Trang đầu</span>
-	      </a>
-	    </li>
-	    <li class="active"><a href="#">1</a></li>
-	    <li><a href="#">2</a></li>
-	    <li><a href="#">3</a></li>
-	    <li>
-	      <a href="#" aria-label="Next">
-	        <span aria-hidden="true">Trang cuối</span>
-	      </a>
-	    </li>
-	  </ul>
-	</nav><!--/.pagination-->
+  Myface Shop
 </main>
 {% endblock %}
