--- a/myface-onface-html/src/views/myface-user-shop.html
+++ b/myface-onface-html/src/views/myface-user-shop.html
@@ -1,6 +1,6 @@
 {% extends "layout/_layout-base.html" %}
 {% block page-container %}
 <main>
-  Myface Shop
+  Myface User's Shop
 </main>
 {% endblock %}
