--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -34,6 +34,7 @@
 @import "page/product-onface.less";
 @import "page/checkout.less";
 @import "page/cart.less";
+@import "page/myface-shop.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
