--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -102,4 +102,10 @@ img {
   padding: 10px 10px 15px;
   margin-bottom: 15px;
 }
+.full-width {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  float: left;
+}
 
