--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -15,26 +15,25 @@
 	  }
 		.shop-logo {
 			position: relative;
-			padding-left:  30px;
-			&:hover {
-				&:before {
-					color: @secondary-color;
-				}
-			}
-			&:before {
-				content: "\f104";
-				font: normal normal normal 14px/1 FontAwesome;
-				font-size: 18px;
-				width: 15px;
-				text-align: left;
-				color: @primary-color;
-				position: absolute;
-				left: 15px;
-				top: 25px;
-			}
 			a {
 				display: block;
-				padding: 20px 0;
+				padding: 20px 0 20px 15px;
+				&:before {
+					content: "\f104";
+					font: normal normal normal 14px/1 FontAwesome;
+					font-size: 18px;
+					width: 15px;
+					text-align: left;
+					color: @primary-color;
+					position: absolute;
+					left: 15px;
+					top: 29px;
+				}
+				&:hover {
+					&:before {
+						color: @secondary-color;
+					}
+				}
 			}
 		}
 		.logo-text {
