--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -1,6 +1,79 @@
 {% extends "layout/_layout-base.html" %}
 {% block page-container %}
 <main>
-  Myface Shop
+	<!--wrap-banner-->
+	<div class="wrap-banner">
+	</div>
+	<!--tabs-bar-->
+  <nav class="full-width tabs-bar">
+  	<ul class="shot-menu">
+      <li class="tab-item active">
+      	<a href="#">Nổi bật</a>
+      	<ul class="sub">
+      		<li><a href="#">Nổi bật 1</a></li>
+      		<li><a href="#">Nổi bật 2</a></li>
+      		<li><a href="#">Nổi bật 3</a></li>
+      	</ul>
+      </li>
+      <li class="tab-item">
+      	<a href="#">Sản phẩm</a>
+      	<ul class="sub">
+      		<li><a href="#">Sản phẩm 1</a></li>
+      		<li><a href="#">Sản phẩm 2</a></li>
+      		<li><a href="#">Sản phẩm 3</a></li>
+      	</ul>
+      </li>
+      <li class="tab-item">
+      	<a href="#">Gần đây</a>
+      	<ul class="sub">
+      		<li><a href="#">Gần đây 1</a></li>
+      		<li><a href="#">Gần đây 2</a></li>
+      		<li><a href="#">Gần đây 3</a></li>
+      	</ul>
+      </li>
+    </ul>
+  </nav><!--/.tabs-bar-->
+  <!--wrap-product-->
+  <div class="row wrap-product">
+	  <ol class="m-product-list">
+	  	<li class="col-md-3 m-product-item">
+	  		<div class="m-product-info">
+	  			<a class="m-product-link" href="#">
+	  				<figure class="hover-effect">
+							<img class="m-product-img" src="assets/images/upload/product/product.jpg" alt="myface">
+							<figcaption>
+								<h2>Áo Sơ Mi Nam Dáng Ôm màu xanh dương</h2>
+								<p class="m-product-description">Sử dụng chất liệu cao cấp cùng kiểu dáng hiện đại, áo sơ mi slim fit vạt bầu đem lại nét thanh lịch, sang trọng cho phái mạnh khi ...</p>
+								<div class="price-block">
+		              <span class="price current">235.000<sup>đ</sup></span>
+		              <span class="price original">325.000<sup>đ</sup></span> 
+		            </div>
+							</figcaption>			
+						</figure>
+	  			</a>
+					<ul class="icon-links">
+						<li class="m-buy" href="#"><span class="icon i-buy">123</span></li>
+						<li class="m-view" href="#"><span class="icon i-view">456</span></li>
+						<li class="m-like" href="#"><span class="icon i-like">789</span></li>
+					</ul>
+	  		</div>
+	  		<h2 class="shop-name">
+	  			<a class="shop-name-inner" href="#">
+	  				<img src="assets/images/upload/shop-img/user.jpg" alt="myface">
+	  				<span>saigon serect fashion</span>
+	  			</a>
+	  		</h2>
+	  	</li>
+	  </ol>
+  </div><!--/.wrap-product-->
+  <div class="full-width load-more">
+	  <button class="btn btn-primary btn-loadmore">Xem thêm đi - không tốn tiền mà</button>
+	</div>
+  <!--back-to-top-btn-->
+  <div class="back-to-top-btn" style="display: none;">
+	  <a href="#">
+	  	back to top
+	  </a>
+	</div><!--/.back-to-top-btn-->
 </main>
 {% endblock %}
