--- a/myface-onface-html/src/views/layout/_layout-base.html
+++ b/myface-onface-html/src/views/layout/_layout-base.html
@@ -28,7 +28,7 @@
 	<![endif]-->
 </head>
 <body class="{% block bodyclass%}{% endblock %}">
-	<div class="{% block page-containerclass%}{% endblock %}">
+	<div class="{% block page-containerclass%}container myface-shop{% endblock %}">
 		<!--header-->
 		{% block header%}{% endblock %}
 		<!--page-container-->
